--- a/item2/index.html
+++ b/item2/index.html
@@ -19,7 +19,7 @@
                 </button>
             </div>
             <div class="image">
-                <img src="anh.svg" alt="Giao hàng">
+                <img src="anh.svg" alt="cửa hàng">
             </div>
         </div>
     </div>
